# JupyterCLI

./: Cargo.toml  README.md  install.sh
.agents/: ONBOARDING.md
.github/workflows/: release.yml
docs/: cli.md  configuration.md  install.md  troubleshooting.md  usage.md
src/: attach.rs  config.rs  lib.rs  logging.rs  main.rs  shellops.rs
src/api/: debuglog.rs  error.rs  mod.rs  server.rs  sse.rs  types.rs  ws.rs
src/cli/: addr.rs  fs.rs  init.rs  mod.rs  preset.rs  server.rs  shell.rs  token.rs
src/tui/: anim.rs  app.rs  dialogs.rs  grid.rs  input.rs  mod.rs  net.rs  render.rs  suspend.rs  theme.rs  wizard.rs
tests/: cli.rs  exec_shutdown.rs  fs_cmds.rs  server_cmds.rs  shell_lib.rs  terminal_limit.rs  token_cmds.rs
tests/common/: mock_jupyter.rs  mock_terminado.rs  mod.rs  write_config.rs
xtask/: Cargo.toml
xtask/src/: main.rs
