[package]
name = "jhc"
version = "0.4.2"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.32"
percent-encoding = "2.3.2"
rand = "0.10.2"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "stream", "query"] }
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-std", "io-util", "process"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
vt100 = "0.16.2"

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"

[workspace]
members = [".", "xtask"]

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
allow_attributes = "deny"

[lints]
workspace = true
